; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_act_ipt.c_tcf_ipt_cleanup.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_act_ipt.c_tcf_ipt_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tc_action = type { %struct.tcf_ipt* }
%struct.tcf_ipt = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tc_action*, i32)* @tcf_ipt_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tcf_ipt_cleanup(%struct.tc_action* %0, i32 %1) #0 {
  %3 = alloca %struct.tc_action*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.tcf_ipt*, align 8
  store %struct.tc_action* %0, %struct.tc_action** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.tc_action*, %struct.tc_action** %3, align 8
  %7 = getelementptr inbounds %struct.tc_action, %struct.tc_action* %6, i32 0, i32 0
  %8 = load %struct.tcf_ipt*, %struct.tcf_ipt** %7, align 8
  store %struct.tcf_ipt* %8, %struct.tcf_ipt** %5, align 8
  %9 = load %struct.tcf_ipt*, %struct.tcf_ipt** %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @tcf_ipt_release(%struct.tcf_ipt* %9, i32 %10)
  ret i32 %11
}

declare dso_local i32 @tcf_ipt_release(%struct.tcf_ipt*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
